iptables.out
# Generated by iptables-save v1.4.21 on Sat Mar  4 22:14:41 2017
# Usage: sudo iptables-resotre < iptables.out
*nat
:PREROUTING ACCEPT [25:2560]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [105:24957]
:POSTROUTING ACCEPT [105:24957]
-A POSTROUTING -m mark --mark 0x1 -j MASQUERADE
COMMIT
# Completed on Sat Mar  4 22:14:41 2017
# Generated by iptables-save v1.4.21 on Sat Mar  4 22:14:41 2017
*security
:INPUT ACCEPT [708:619236]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [852:139042]
COMMIT
# Completed on Sat Mar  4 22:14:41 2017
# Generated by iptables-save v1.4.21 on Sat Mar  4 22:14:41 2017
*raw
:PREROUTING ACCEPT [733:621796]
:OUTPUT ACCEPT [852:139042]
COMMIT
# Completed on Sat Mar  4 22:14:41 2017
# Generated by iptables-save v1.4.21 on Sat Mar  4 22:14:41 2017
*mangle
:PREROUTING ACCEPT [733:621796]
:INPUT ACCEPT [733:621796]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [852:139042]
:POSTROUTING ACCEPT [878:141218]
-A PREROUTING -i br0 -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Sat Mar  4 22:14:41 2017
# Generated by iptables-save v1.4.21 on Sat Mar  4 22:14:41 2017
*filter
:INPUT DROP [13:840]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A INPUT -p udp -j NFQUEUE --queue-num 10000
-A FORWARD -m mark --mark 0x1 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j NFQUEUE --queue-num 10001
-A OUTPUT -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j NFQUEUE --queue-num 10001
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sat Mar  4 22:14:41 2017
